# as5600-magnetic-encoder-esp32c3-rs

./: Cargo.toml
.cargo/: config.toml
